include/mcp/c_api/mcp_c_types_api.h

/* ============================================================================
 * Request ID Functions (variant<string, int>)
 * ============================================================================
 */

MCP_API mcp_request_id_t mcp_request_id_create_string(const char* str)
    MCP_NOEXCEPT;
MCP_API mcp_request_id_t mcp_request_id_create_number(int64_t num) MCP_NOEXCEPT;
MCP_API void mcp_request_id_free(mcp_request_id_t id) MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_request_id_is_string(mcp_request_id_t id) MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_request_id_is_number(mcp_request_id_t id) MCP_NOEXCEPT;
MCP_API mcp_request_id_type_t mcp_request_id_get_type(mcp_request_id_t id)
    MCP_NOEXCEPT;
MCP_API const char* mcp_request_id_get_string(mcp_request_id_t id) MCP_NOEXCEPT;
MCP_API int64_t mcp_request_id_get_number(mcp_request_id_t id) MCP_NOEXCEPT;
MCP_API mcp_request_id_t mcp_request_id_clone(mcp_request_id_t id) MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_request_id_is_valid(mcp_request_id_t id) MCP_NOEXCEPT;
/* ============================================================================
 * Progress Token Functions (variant<string, int>)
 * ============================================================================
 */

MCP_API mcp_progress_token_t mcp_progress_token_create_string(const char* str)
    MCP_NOEXCEPT;
MCP_API mcp_progress_token_t mcp_progress_token_create_number(int64_t num)
    MCP_NOEXCEPT;
MCP_API void mcp_progress_token_free(mcp_progress_token_t token) MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_progress_token_is_string(mcp_progress_token_t token)
    MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_progress_token_is_number(mcp_progress_token_t token)
    MCP_NOEXCEPT;
MCP_API mcp_progress_token_type_t
mcp_progress_token_get_type(mcp_progress_token_t token) MCP_NOEXCEPT;
MCP_API const char* mcp_progress_token_get_string(mcp_progress_token_t token)
    MCP_NOEXCEPT;
MCP_API int64_t mcp_progress_token_get_number(mcp_progress_token_t token)
    MCP_NOEXCEPT;
/* ============================================================================
 * Cursor Functions
 * ============================================================================
 */

MCP_API mcp_cursor_t mcp_cursor_create(const char* value) MCP_NOEXCEPT;
MCP_API void mcp_cursor_free(mcp_cursor_t cursor) MCP_NOEXCEPT;
MCP_API const char* mcp_cursor_get_value(mcp_cursor_t cursor) MCP_NOEXCEPT;
/* ============================================================================
 * Content Block Functions
 * ============================================================================
 */

MCP_API mcp_content_block_t mcp_content_block_create_text(const char* text)
    MCP_NOEXCEPT;
MCP_API mcp_content_block_t mcp_content_block_create_image(
    const char* data, const char* mime_type) MCP_NOEXCEPT;
MCP_API mcp_content_block_t
mcp_content_block_create_resource(mcp_resource_t resource) MCP_NOEXCEPT;
MCP_API void mcp_content_block_free(mcp_content_block_t block) MCP_NOEXCEPT;
MCP_API mcp_content_block_type_t
mcp_content_block_get_type(mcp_content_block_t block) MCP_NOEXCEPT;
MCP_API const char* mcp_content_block_get_text(mcp_content_block_t block)
    MCP_NOEXCEPT;
MCP_API mcp_bool_t mcp_content_block_get_image(mcp_content_block_t block,
                                               const char** out_data,
                                               const char** out_mime_type)
    MCP_NOEXCEPT;
MCP_API mcp_resource_t mcp_content_block_get_resource(mcp_content_block_t block)
    MCP_NOEXCEPT;
/* ============================================================================
 * Tool Functions
 * ============================================================================
 */

MCP_API mcp_tool_t mcp_tool_create(const char* name,
                                   const char* description) MCP_NOEXCEPT;
MCP_API void mcp_tool_free(mcp_tool_t tool) MCP_NOEXCEPT;
MCP_API const char* mcp_tool_get_name(mcp_tool_t tool) MCP_NOEXCEPT;
MCP_API const char* mcp_tool_get_description(mcp_tool_t tool) MCP_NOEXCEPT;
MCP_API void mcp_tool_set_input_schema(
    mcp_tool_t tool, mcp_tool_input_schema_t schema) MCP_NOEXCEPT;
MCP_API mcp_tool_input_schema_t mcp_tool_get_input_schema(mcp_tool_t tool)
    MCP_NOEXCEPT;
MCP_API mcp_tool_input_schema_t mcp_tool_input_schema_create(void) MCP_NOEXCEPT;
MCP_API void mcp_tool_input_schema_free(mcp_tool_input_schema_t schema)
    MCP_NOEXCEPT;
MCP_API void mcp_tool_input_schema_set_type(mcp_tool_input_schema_t schema,
                                            const char* type) MCP_NOEXCEPT;
MCP_API const char* mcp_tool_input_schema_get_type(
    mcp_tool_input_schema_t schema) MCP_NOEXCEPT;
MCP_API void mcp_tool_input_schema_add_property(mcp_tool_input_schema_t schema,
                                                const char* name,
                                                const char* json_schema)
    MCP_NOEXCEPT;
MCP_API void mcp_tool_input_schema_add_required(mcp_tool_input_schema_t schema,
                                                const char* name) MCP_NOEXCEPT;
MCP_API size_t mcp_tool_input_schema_get_property_count(
    mcp_tool_input_schema_t schema) MCP_NOEXCEPT;
MCP_API size_t mcp_tool_input_schema_get_required_count(
    mcp_tool_input_schema_t schema) MCP_NOEXCEPT;
/* ============================================================================
 * Prompt Functions
 * ============================================================================
 */

MCP_API mcp_prompt_t mcp_prompt_create(const char* name,
                                       const char* description) MCP_NOEXCEPT;
MCP_API void mcp_prompt_free(mcp_prompt_t prompt) MCP_NOEXCEPT;
MCP_API const char* mcp_prompt_get_name(mcp_prompt_t prompt) MCP_NOEXCEPT;
MCP_API const char* mcp_prompt_get_description(mcp_prompt_t prompt)
    MCP_NOEXCEPT;
MCP_API void mcp_prompt_add_argument(mcp_prompt_t prompt,
                                     const char* name,
                                     const char* description,
                                     mcp_bool_t required) MCP_NOEXCEPT;
MCP_API size_t mcp_prompt_get_argument_count(mcp_prompt_t prompt) MCP_NOEXCEPT;
/* ============================================================================
 * Error Functions
 * ============================================================================
 */

MCP_API mcp_error_t mcp_error_create(int32_t code,
                                     const char* message) MCP_NOEXCEPT;
MCP_API void mcp_error_free(mcp_error_t error) MCP_NOEXCEPT;
MCP_API int32_t mcp_error_get_code(mcp_error_t error) MCP_NOEXCEPT;
MCP_API const char* mcp_error_get_message(mcp_error_t error) MCP_NOEXCEPT;
MCP_API void mcp_error_set_data(mcp_error_t error,
                                const char* json_data) MCP_NOEXCEPT;
MCP_API const char* mcp_error_get_data(mcp_error_t error) MCP_NOEXCEPT;