sdk/csharp/src/Interop/McpTypesApi.cs

using System;
using System.Runtime.InteropServices;
using static GopherMcp.Interop.McpTypes;
using static GopherMcp.Interop.McpHandles;

namespace GopherMcp.Interop
{
    /// <summary>
    /// P/Invoke declarations for MCP C API functions (mcp_c_types_api.h)
    /// </summary>
    public static class McpTypesApi
    {
        // Library name - adjust based on platform naming conventions
#if WINDOWS
        private const string LibraryName = "mcp_c.dll";
#elif MACOS
        private const string LibraryName = "libmcp_c.dylib";
#else
        private const string LibraryName = "libmcp_c.so";
#endif

        /* ============================================================================
         * Request ID Functions (variant<string, int>)
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_request_id_create_string([MarshalAs(UnmanagedType.LPStr)] string str);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_request_id_create_number(long num);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_request_id_free(IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_request_id_is_string(IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_request_id_is_number(IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_request_id_type_t mcp_request_id_get_type(IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_request_id_get_string(IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern long mcp_request_id_get_number(IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_request_id_clone(IntPtr id);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_request_id_is_valid(IntPtr id);

        /* ============================================================================
         * Progress Token Functions (variant<string, int>)
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_progress_token_create_string([MarshalAs(UnmanagedType.LPStr)] string str);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_progress_token_create_number(long num);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_progress_token_free(IntPtr token);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_progress_token_is_string(IntPtr token);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_progress_token_is_number(IntPtr token);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_progress_token_type_t mcp_progress_token_get_type(IntPtr token);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_progress_token_get_string(IntPtr token);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern long mcp_progress_token_get_number(IntPtr token);

        /* ============================================================================
         * Cursor Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_cursor_create([MarshalAs(UnmanagedType.LPStr)] string value);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_cursor_free(IntPtr cursor);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_cursor_get_value(IntPtr cursor);

        /* ============================================================================
         * Content Block Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_content_block_create_text([MarshalAs(UnmanagedType.LPStr)] string text);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_content_block_create_image(
            [MarshalAs(UnmanagedType.LPStr)] string data,
            [MarshalAs(UnmanagedType.LPStr)] string mime_type);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_content_block_create_resource(IntPtr resource);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_content_block_free(IntPtr block);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_content_block_type_t mcp_content_block_get_type(IntPtr block);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_content_block_get_text(IntPtr block);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern mcp_bool_t mcp_content_block_get_image(
            IntPtr block,
            out IntPtr out_data,
            out IntPtr out_mime_type);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_content_block_get_resource(IntPtr block);

        /* ============================================================================
         * Tool Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_tool_create(
            [MarshalAs(UnmanagedType.LPStr)] string name,
            [MarshalAs(UnmanagedType.LPStr)] string description);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_tool_free(IntPtr tool);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_tool_get_name(IntPtr tool);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_tool_get_description(IntPtr tool);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_tool_set_input_schema(IntPtr tool, IntPtr schema);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_tool_get_input_schema(IntPtr tool);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_tool_input_schema_create();

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_tool_input_schema_free(IntPtr schema);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_tool_input_schema_set_type(
            IntPtr schema,
            [MarshalAs(UnmanagedType.LPStr)] string type);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_tool_input_schema_get_type(IntPtr schema);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_tool_input_schema_add_property(
            IntPtr schema,
            [MarshalAs(UnmanagedType.LPStr)] string name,
            [MarshalAs(UnmanagedType.LPStr)] string json_schema);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_tool_input_schema_add_required(
            IntPtr schema,
            [MarshalAs(UnmanagedType.LPStr)] string name);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr mcp_tool_input_schema_get_property_count(IntPtr schema);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr mcp_tool_input_schema_get_required_count(IntPtr schema);

        /* ============================================================================
         * Prompt Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_prompt_create(
            [MarshalAs(UnmanagedType.LPStr)] string name,
            [MarshalAs(UnmanagedType.LPStr)] string description);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_prompt_free(IntPtr prompt);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_prompt_get_name(IntPtr prompt);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_prompt_get_description(IntPtr prompt);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_prompt_add_argument(
            IntPtr prompt,
            [MarshalAs(UnmanagedType.LPStr)] string name,
            [MarshalAs(UnmanagedType.LPStr)] string description,
            mcp_bool_t required);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern UIntPtr mcp_prompt_get_argument_count(IntPtr prompt);

        /* ============================================================================
         * Error Functions
         * ============================================================================ */

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_error_create(
            int code,
            [MarshalAs(UnmanagedType.LPStr)] string message);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_error_free(IntPtr error);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int mcp_error_get_code(IntPtr error);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_error_get_message(IntPtr error);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void mcp_error_set_data(
            IntPtr error,
            [MarshalAs(UnmanagedType.LPStr)] string json_data);

        [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr mcp_error_get_data(IntPtr error);
